# SMC-Software-Metrics-Calculator

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  defect_data.json  main.py  metrics.db  metrics_history.db  pyproject.toml  requirements.txt  sprintJSON.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
Sample_Testing_Files/: code_metrics.py  complexity_report.py  data_storage.py  effort_report.py  metrics_dashboard.py  project_health_report.py  quality_report.py
data/: defect_data.json  sprintJSON.json
docs/: architecture.md
java_analyzer/: dashboard.py
java_analyzer/detectors/: base.py  design.py  implementation.py
java_analyzer/utils/: helpers.py  ui_components.py
src/: __init__.py  metrics_calculator.py
src/java_analyzer/: __init__.py  analyzer_engine.py
src/java_analyzer/detectors/: naming_docs.py
src/software_metrics/ui/: dashboard.py
tests/sample_data/: code_metrics.py  complexity_report.py  data_storage.py  effort_report.py  metrics_dashboard.py  project_health_report.py  quality_report.py
